{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 500,
  "lineage": "17d42b56-6ea0-ca6f-1292-70c99f478f58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:security-group/sg-0c09cf7ae52ba98d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c09cf7ae52ba98d8",
            "ingress": [],
            "name": "aws_batch_compute_environment_security_group",
            "name_prefix": "",
            "owner_id": "115553109071",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-bd9b60c0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "unused",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:security-group/sg-03da4d87d84f04d52",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03da4d87d84f04d52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "Unused security group",
            "name_prefix": "",
            "owner_id": "115553109071",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093b9007f2535263e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-0f1ccddc55120fa90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0f1ccddc55120fa90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115553109071",
            "vpc_id": "vpc-093b9007f2535263e"
          },
          "dependencies": [
            "aws_vpc.sample"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:vpc/vpc-093b9007f2535263e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-072d180ce98cfc136",
            "default_route_table_id": "rtb-07977699ae8875f42",
            "default_security_group_id": "sg-0cf9d4c779d35db52",
            "dhcp_options_id": "dopt-3045214a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-093b9007f2535263e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07977699ae8875f42",
            "owner_id": "115553109071"
          }
        }
      ]
    }
  ]
}